# psf_viewer

./: README.md  index.html  package-lock.json  package.json  vite.config.js
.github/workflows/: build.yml  test.yml
docs/: ROADMAP.md
examples/: array.csv
psf-core/: Cargo.toml
psf-core/src/: lib.rs
src/: colormap.js  geometry3d.js  linechart.js  main.js  micedit.js  psfplot.js  style.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: lib.rs  main.rs
