[package]
name = "psf-array-viewer"
version = "0.1.0"
description = "Acoustic point-spread-function viewer for microphone arrays"
authors = ["you"]
edition = "2021"

[lib]
name = "psf_array_viewer_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
psf-core = { path = "../psf-core" }

# Small, fast release binary.
[profile.release]
opt-level = "z"
lto = true
codegen-units = 1
panic = "abort"
strip = true
